--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <h1>Hello World</h1>
-    This is my <i>first</i> test website.
+    This is my <i>first</i> test website.<br>
+    <img src="Superman">
   </body>
 </html>
