--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-  <body>
+  <body bgcolor="purple">
     <h1>Hello World</h1>
     This is my <i>first</i> test website.<br>
-    <img src="Superman">
+    <a href="superman"><img src="Superman"></a>
   </body>
 </html>
