--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <body bgcolor="purple">
     <h1>Hello World</h1>
     This is my <i>first</i> test website.<br>
-    <a href="superman"><img src="Superman"></a>
+    <a href="Superman"><img src="Superman"></a>
   </body>
 </html>
