--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body bgcolor="purple">
     <h1>Hello World</h1>
     This is my <i>first</i> test website.<br>
-    <a href="Superman.jpeg"><img src="Superman.jpeg" width="50%"></a>
+    <a href="Superman.jpeg"><img src="Superman.jpeg" width="50%"></a><br>
+    <a href="https://mail.google.com/mail/u/0/#inbox"><img src="Superman.jpeg" width="10%"></a>
   </body>
 </html>
