--- a/index.html
+++ b/index.html
@@ -5,5 +5,18 @@
     <a href="Superman.jpeg"><img src="Superman.jpeg" width="50%"></a><br>
     <a href="email.jpeg"><img src="email.jpeg" width="20%"></a><br>
     <a href="https://mail.google.com/mail/u/0/#inbox"><img src="email.jpeg" width="10%"></a>
+    
+    <!-- 4/17/23 List -->
+    
+    <h3> Grocery list </h3>
+      <ul>
+        <li> eggs </li>
+        <li> milk </li>
+        <li> sugar </li>
+        <li> oil </li>
+        <li> bananas </li>
+        <li> strawbaries </li>
+    <ol type = "1"> </ol>
   </body>
+  
 </html>
