--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </ul>
     
     <h2> Chore list </h2>
-     <ol type = "I"> </ol>
+     <ol type = "I">
        <li> wash dishies </li>
        <li> vacume the carpet </li>
        <li> swep the floor </li>
