--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <a href="Superman.jpeg"><img src="Superman.jpeg" width="50%"></a><br>
     <a href="email.jpeg"><img src="email.jpeg" width="20%"></a><br>
     <a href="https://mail.google.com/mail/u/0/#inbox"><img src="email.jpeg" width="10%"></a>
+    <a href="https://edmonds15.instructure.com/"><img src="canvas.png" width="15%"></a>
     
     <!-- 4/17/23 List mini Assignment -->
     
