--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     This is my <i>first</i> test website.<br>
     <a href="Superman.jpeg"><img src="Superman.jpeg" width="50%"></a><br>
     <a href="email.jpeg"><img src="email.jpeg" width="20%"></a><br>
+    <h2> Two hyperlinks</h2>
     <a href="https://edmonds15.instructure.com/"><img src="canvas.png" width="15%"></a>
     <a href="https://mail.google.com/mail/u/0/#inbox"><img src="email.jpeg" width="15%"></a>
     
