--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <body bgcolor="sky blue">
+  <body bgcolor="light blue">
     <h1>Hello World</h1>
     This is my <i>first</i> test website.<br>
     <a href="Superman.jpeg"><img src="Superman.jpeg" width="50%"></a><br>
