--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <body bgcolor="light blue">
+  <body bgcolor="wihte">
     <h1>Hello World</h1>
     This is my <i>first</i> test website.<br>
     <a href="Superman.jpeg"><img src="Superman.jpeg" width="50%"></a><br>
@@ -42,7 +42,7 @@
         <!-- 4/17/23 Table for school -->
  
  <table width='100%' border=1px cellspacing=0>
- <caption>Table of Scores</caption>
+ <caption>Table for school</caption>
   
    <tr>
      <th>clases</th>
