--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
   <h1>My favorite movie</h1>
   <caption><h2> Hacksaw Ridge </h2></caption>
   <p> Hacksaw ridge is my favorite movie because it has a lot of action and it is also a true story.<br>
+    The fact that the story is true is so inspirational to me. The movie starts out with a young man 
+    named Desmond Doson  in his early 20s putting his belt around a boy that fell and broke his leg. 
+    He goes to the hospital to get his belt back and meets his future wife who is a nurse. The date for 
+    some time but then the war started and he had to enlist, he couldn’t stay home and watch everyone as 
+    they left home to protect the country and his father is a former soldier. So Desmond enlist goes through 
+    all the training but he refused to touch a gun, this made his superiors and his unit angry. His unit beat 
+    him up in his sleep and his superiors tried to dishonorably discharge him. Desomnd argued that he doesn’t 
+    need to carry a gun, he can train as a medic and save lives instead of taking them. After some time the army 
+    allowed him to serve and his unit shipped out. They went to a place called Hacksaw ridge, they fought and beat 
+    the vietnamese soldiers and took the high ground they slept there that night but the next day the enemy had a 
+    surprise attack from tunnels underground. The attack forced them to retreat back but so many of them were injured 
+    and Desmond refused to retreat that day he saved 70 people from the ridge including his superior officer and some of his unit.  
+  </p>
+
       
   
  
