--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <html>
+  <head>
+     <style>
+      h2 {
+         color: blue;
+         font-size: 30pt;
+      }
+      </style>
+   </head>
   <body bgcolor="#9999ee">
     <h1>Hello World</h1>
     This is my <i>first</i> test website.<br>
