--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
        <li> clean the kitchen </li>
       </ol>
     
-    <h2> best sports </h2>
+    <h2> Best sports </h2>
       <ol type = "A">
         <li> football </li>
         <li> basketball </li>
