--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         
         
-      <video controls>
+      <video controls width = "10%">
         <source src= "jasper.mov">
         file not found
       </video>
